Preparing probability in PIMC, ans some other minor changes

--- a/src/examples/OpeningLead.ipynb
+++ b/src/examples/OpeningLead.ipynb
@@ -39,20 +39,21 @@
       "WARNING:tensorflow:From c:\\Python311\\Lib\\site-packages\\tensorflow\\python\\compat\\v2_compat.py:107: disable_resource_variables (from tensorflow.python.ops.variable_scope) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "non-resource variables are not supported in the long term\n",
-      "INFO:tensorflow:Restoring parameters from ..\\UCBC 2024/Models/NS1EW99-bidding_same-5556000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\UCBC 2024/Models/NS1EW99-binfo_same-5556000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\models/GIB/bidding_V2-3130000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\models/contract/contract-193200\n",
+      "INFO:tensorflow:Restoring parameters from ..\\models/GIB/binfo_V2-3130000\n",
       "INFO:tensorflow:Restoring parameters from ..\\UCBC 2024/Models/lead_suit-999000\n",
       "INFO:tensorflow:Restoring parameters from ..\\UCBC 2024/Models/lead_nt-475000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\UCBC 2024/Models/Jack/lr3-1000000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\UCBC 2024/Models/single_dummy-32768000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\UCBC 2024/Models/lefty_nt-475000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\UCBC 2024/Models/dummy_nt-475000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\UCBC 2024/Models/righty_nt-475000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\UCBC 2024/Models/decl_nt-950000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\UCBC 2024/Models/lefty_suit-999000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\UCBC 2024/Models/dummy_suit-999000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\UCBC 2024/Models/righty_suit-999000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\UCBC 2024/Models/decl_suit-1278000\n"
+      "INFO:tensorflow:Restoring parameters from ..\\models/lr3_model/lr3-1000000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\models/single_dummy/single_dummy-32768000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\models/playing/lefty_nt-475000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\models/playing/dummy_nt-475000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\models/playing/righty_nt-475000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\models/playing/decl_nt-475000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\models/playing/lefty_suit-999000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\models/playing/dummy_suit-999000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\models/playing/righty_suit-999000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\models/playing/decl_suit-999000\n"
      ]
     }
    ],
@@ -97,7 +98,7 @@
     {
      "data": {
       "text/plain": [
-       "H7"
+       "H8"
       ]
      },
      "execution_count": 4,
@@ -129,17 +130,25 @@
      "data": {
       "text/plain": [
        "[{'card': 'Hx',\n",
-       "  'insta_score': 0.206,\n",
-       "  'expected_tricks_sd': 10.4,\n",
-       "  'p_make_contract': 0.3},\n",
-       " {'card': 'DA',\n",
-       "  'insta_score': 0.174,\n",
-       "  'expected_tricks_sd': 10.6,\n",
-       "  'p_make_contract': 0.2},\n",
+       "  'insta_score': 0.256,\n",
+       "  'expected_tricks_sd': 9.25,\n",
+       "  'p_make_contract': 0.55,\n",
+       "  'expected_score_sd': -194},\n",
        " {'card': 'Cx',\n",
-       "  'insta_score': 0.253,\n",
-       "  'expected_tricks_sd': 10.9,\n",
-       "  'p_make_contract': 0.1}]"
+       "  'insta_score': 0.288,\n",
+       "  'expected_tricks_sd': 9.6,\n",
+       "  'p_make_contract': 0.55,\n",
+       "  'expected_score_sd': -214},\n",
+       " {'card': 'Sx',\n",
+       "  'insta_score': 0.2,\n",
+       "  'expected_tricks_sd': 9.6,\n",
+       "  'p_make_contract': 0.5,\n",
+       "  'expected_score_sd': -242},\n",
+       " {'card': 'DA',\n",
+       "  'insta_score': 0.141,\n",
+       "  'expected_tricks_sd': 9.6,\n",
+       "  'p_make_contract': 0.45,\n",
+       "  'expected_score_sd': -287}]"
       ]
      },
      "execution_count": 5,
@@ -173,16 +182,26 @@
     {
      "data": {
       "text/plain": [
-       "['Txx.QT8x.A98.9xx A9x.K9.x.AKJ8xxx Qxx.Axxx.QJxxx.x KJ8x.Jxx.KTxx.QT 0.61089',\n",
-       " 'Txx.QT8x.A98.9xx AK8.xx.Q.KQJT8xx J9x.AJ9x.KTxxx.x Qxxx.Kxx.Jxxx.Ax 0.59200',\n",
-       " 'Txx.QT8x.A98.9xx J8x.AKJx..AQ8xxx K9x.9xx.QJxxx.KT AQxx.xx.KTxxx.Jx 0.59004',\n",
-       " 'Txx.QT8x.A98.9xx A8x.AJ9x..AQT8xx QJx.xx.QTxxx.KJx K9xx.Kxx.KJxxx.x 0.58762',\n",
-       " 'Txx.QT8x.A98.9xx Kxx.Ax.Q.KQJT8xx A9x.KJxx.JTxxx.x QJ8x.9xx.Kxxx.Ax 0.58224',\n",
-       " 'Txx.QT8x.A98.9xx Q98.AJxx..AKJTxx Kxx.9x.KJxxx.Qxx AJxx.Kxx.QTxxx.8 0.58113',\n",
-       " 'Txx.QT8x.A98.9xx Q8x.K9.x.AKQJTxx AJx.xxxx.KQxxx.x K9xx.AJx.JTxx.8x 0.57867',\n",
-       " 'Txx.QT8x.A98.9xx AQ9x.Kxx.x.KQJT8 Kx.9xx.KQJxx.xxx J8xx.AJx.Txxx.Ax 0.57531',\n",
-       " 'Txx.QT8x.A98.9xx KQx.A9x.J.AQT8xx 98x.Kxx.Qxxxx.Kx AJxx.Jxx.KTxx.Jx 0.57466',\n",
-       " 'Txx.QT8x.A98.9xx Jxxx.A9xx..AKQxx 8x.Kxx.KQJxx.JTx AKQ9.Jx.Txxxx.8x 0.57254']"
+       "['Txx.QT8x.A98.9xx A8xx.xx.x.AKQJxx 9x.AJ9x.QJxxx.Tx KQJx.Kxx.KTxx.8x 0.62129',\n",
+       " 'Txx.QT8x.A98.9xx 9xx.Axxx.K.Axxxx AKx.9x.Jxxxx.QJ8 QJ8x.KJx.QTxx.KT 0.59060',\n",
+       " 'Txx.QT8x.A98.9xx Kxx.J9xx.xx.AKTx A98.Ax.Jxxxx.Q8x QJxx.Kxx.KQT.Jxx 0.57488',\n",
+       " 'Txx.QT8x.A98.9xx Qx.KJ9.x.AKQTxxx K8xx.Axx.Jxxxx.x AJ9x.xxx.KQTx.J8 0.57443',\n",
+       " 'Txx.QT8x.A98.9xx KQx.A9x.J.AQT8xx 98x.Kxx.Qxxxxx.K AJxx.Jxx.KTx.Jxx 0.56668',\n",
+       " 'Txx.QT8x.A98.9xx J9xx.Axx.xx.AKJx KQ.J9x.JTxxx.QT8 A8xx.Kxx.KQx.xxx 0.56096',\n",
+       " 'Txx.QT8x.A98.9xx KQx.xxx.Q.AT8xxx 98x.AKx.Jxxxx.KJ AJxx.J9x.KTxx.Qx 0.56083',\n",
+       " 'Txx.QT8x.A98.9xx A98x.KJxx.x.KJTx Qx.A9.KJTxx.Q8xx KJxx.xxx.Qxxx.Ax 0.55998',\n",
+       " 'Txx.QT8x.A98.9xx Q9xx.Kxx.x.AKxxx Kx.AJxx.QJxxx.JT AJ8x.9x.KTxx.Q8x 0.55927',\n",
+       " 'Txx.QT8x.A98.9xx KJ9.K9xx.T.AQJxx Axx.Axx.QJxxx.Tx Q8xx.Jx.Kxxx.K8x 0.55848',\n",
+       " 'Txx.QT8x.A98.9xx A9x.Axx.x.QJT8xx KQx.Kxx.KJxxx.xx J8xx.J9x.QTxx.AK 0.55758',\n",
+       " 'Txx.QT8x.A98.9xx AKx.K9x.Tx.QJxxx Jxx.Axxx.QJxxx.K Q98x.Jx.Kxx.AT8x 0.55719',\n",
+       " 'Txx.QT8x.A98.9xx 8xx.Axx.Qx.AQJxx AKx.Kxx.JTxxx.8x QJ9x.J9x.Kxx.KTx 0.55606',\n",
+       " 'Txx.QT8x.A98.9xx AJxx.9x.x.AQTxxx 8x.AKJx.QJxxx.Jx KQ9x.xxx.KTxx.K8 0.55574',\n",
+       " 'Txx.QT8x.A98.9xx K98x.Axx.x.KQJxx AJ.KJ9x.Qxxxx.Tx Qxxx.xx.KJTx.A8x 0.55455',\n",
+       " 'Txx.QT8x.A98.9xx KQ9x.Jxx.T.AQ8xx J8.AKxx.QJxxx.Jx Axxx.9x.Kxxx.KTx 0.55394',\n",
+       " 'Txx.QT8x.A98.9xx Qx.KJx.x.AKT8xxx AKxx.9xx.Qxxxx.J J98x.Axx.KJTx.Qx 0.55280',\n",
+       " 'Txx.QT8x.A98.9xx K9x.Kxx.T.AQJ8xx AJx.J9xx.Jxxxx.K Q8xx.Ax.KQxx.Txx 0.55266',\n",
+       " 'Txx.QT8x.A98.9xx Axx.K9x.QTx.QJ8x K8x.Axx.Jxxxx.Kx QJ9x.Jxx.Kx.ATxx 0.55038',\n",
+       " 'Txx.QT8x.A98.9xx Q8x.KJxx.x.AKJT8 KJ9.Ax.Qxxxx.xxx Axxx.9xx.KJTx.Qx 0.54947']"
       ]
      },
      "execution_count": 6,
