--- a/src/examples/bidding_info.ipynb
+++ b/src/examples/bidding_info.ipynb
@@ -12,20 +12,21 @@
       "WARNING:tensorflow:From c:\\Python311\\Lib\\site-packages\\tensorflow\\python\\compat\\v2_compat.py:107: disable_resource_variables (from tensorflow.python.ops.variable_scope) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "non-resource variables are not supported in the long term\n",
-      "INFO:tensorflow:Restoring parameters from ..\\UCBC 2024/Models/NS1EW99-bidding_same-5556000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\UCBC 2024/Models/NS1EW99-binfo_same-5556000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\models/GIB/bidding_V2-3130000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\models/contract/contract-193200\n",
+      "INFO:tensorflow:Restoring parameters from ..\\models/GIB/binfo_V2-3130000\n",
       "INFO:tensorflow:Restoring parameters from ..\\UCBC 2024/Models/lead_suit-999000\n",
       "INFO:tensorflow:Restoring parameters from ..\\UCBC 2024/Models/lead_nt-475000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\UCBC 2024/Models/Jack/lr3-1000000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\UCBC 2024/Models/single_dummy-32768000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\UCBC 2024/Models/lefty_nt-475000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\UCBC 2024/Models/dummy_nt-475000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\UCBC 2024/Models/righty_nt-475000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\UCBC 2024/Models/decl_nt-950000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\UCBC 2024/Models/lefty_suit-999000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\UCBC 2024/Models/dummy_suit-999000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\UCBC 2024/Models/righty_suit-999000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\UCBC 2024/Models/decl_suit-1278000\n"
+      "INFO:tensorflow:Restoring parameters from ..\\models/lr3_model/lr3-1000000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\models/single_dummy/single_dummy-32768000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\models/playing/lefty_nt-475000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\models/playing/dummy_nt-475000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\models/playing/righty_nt-475000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\models/playing/decl_nt-475000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\models/playing/lefty_suit-999000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\models/playing/dummy_suit-999000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\models/playing/righty_suit-999000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\models/playing/decl_suit-999000\n"
      ]
     }
    ],
@@ -73,8 +74,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "c_hcp:[[6.24 7.22 8.02]]\n",
-      "c_shp:[[3.2  4.01 3.6  2.18 3.34 3.95 3.72 1.91 1.58 2.11 2.4  7.01]]\n"
+      "c_hcp:[[7.17 6.85 8.02]]\n",
+      "c_shp:[[3.5  3.75 4.19 1.52 3.41 3.93 4.15 1.44 1.54 1.72 2.15 7.82]]\n"
      ]
     }
    ],
@@ -105,7 +106,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 4.85 21.18  6.32]]\n"
+      "[[ 4.51 20.51  8.14]]\n"
      ]
     }
    ],
@@ -133,8 +134,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[22.29  7.97  5.1 ]\n",
-      " [22.92  9.21  4.15]]\n"
+      "[[19.12 13.09  3.84]\n",
+      " [21.61 12.98  2.25]]\n"
      ]
     }
    ],
