Introduced different model for opponents sampling

--- a/src/examples/bidding_info.ipynb
+++ b/src/examples/bidding_info.ipynb
@@ -58,7 +58,7 @@
    "outputs": [],
    "source": [
     "auction = ['4C']\n",
-    "n_steps = binary.calculate_step_bidding_info(auction, models)\n",
+    "n_steps = binary.calculate_step_bidding_info(auction)\n",
     "nesw_i = 1\n",
     "vuln = [True, False]\n",
     "hand = binary.parse_hand_f(32)(\"AJT85.AKT.K63.K8\")\n",
@@ -112,7 +112,7 @@
    ],
    "source": [
     "auction = ['PAD_START', '2C','4N']\n",
-    "n_steps = binary.calculate_step_bidding_info(auction, models)\n",
+    "n_steps = binary.calculate_step_bidding_info(auction)\n",
     "n_samples = 10\n",
     "ns = -1\n",
     "ew = -1\n",
@@ -169,7 +169,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.4"
   },
   "orig_nbformat": 4
  },
