--- a/UCBC 2024/Simulations/bidding_info.ipynb
+++ b/UCBC 2024/Simulations/bidding_info.ipynb
@@ -93,7 +93,7 @@
    ],
    "source": [
     "auction = [\"PAD_START\",\"PAD_START\",\"PAD_START\",'1D', \"PASS\", \"1S\", \"PASS\", \"2D\", \"PASS\", \"2S\", 'PASS', 'PASS', 'PASS']\n",
-    "n_steps = binary.calculate_step_bidding_info(auction, models)\n",
+    "n_steps = binary.calculate_step_bidding_info(auction)\n",
     "print(\"n_steps\", n_steps)\n",
     "nesw_i = 3\n",
     "vuln = [False, False]\n",
@@ -152,7 +152,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.4"
   },
   "orig_nbformat": 4
  },
