Introducing a new type of Deck with only 24 cards, and change to configuration for dummy analysis. And some minor fixes

--- a/UCBC 2024/Simulations/BiddingCrazy.ipynb
+++ b/UCBC 2024/Simulations/BiddingCrazy.ipynb
@@ -74,7 +74,7 @@
    "source": [
     "models = Models.from_conf(conf.load('../Conf/UCBC2024.conf'),'..')   # loading neural networks\n",
     "models.search_threshold = 0.07\n",
-    "models.double_dummy_eval = True\n",
+    "models.double_dummy_calculator = True\n",
     "# Filter to remove hands not consistent with the bidding. Used during play\n",
     "models.bid_accept_play_threshold = 0.01\n",
     "sampler = Sample.from_conf(conf.load('../Conf/UCBC2024.conf'), False)  # Load sampling strategies\n",
