--- a/UCBC 2024/Simulations/SingleDummyEstimates.ipynb
+++ b/UCBC 2024/Simulations/SingleDummyEstimates.ipynb
@@ -146,7 +146,7 @@
     "\n",
     "hands_str = '9.AKQxxx.9xxx.8x xxx.98.JTxx.KTxx AKQJT.Jx.A8x.AJx 8xxx.Txx.KQ.Q9xx'  # N E S W\n",
     "contract = '7HN'\n",
-    "models.lead_included = True\n",
+    "models.estimator = 'sde'\n",
     "opening_lead = 'C3'"
    ]
   },
